@@ -248,6 +248,9 @@ print_ndarr(det.pedestals(par), 'pedestals w/o reshape')
 det.do_reshape_2d_to_3d(flag=True)
 print_ndarr(det.pedestals(par), 'pedestals reshaped to 3d')
 
+print_ndarr(img, 'img')
+print_ndarr(det.ndarray_from_image(par, img), 'nda_from_img')
+         
 ##-----------------------------
 
 sys.exit(0)
